--- a/gscript/appsscript.json
+++ b/gscript/appsscript.json
@@ -1,11 +1,19 @@
 {
-  "timeZone": "America/New_York",
+  "timeZone": "America/Toronto",
   "dependencies": {
-  },
-  "webapp": {
-    "access": "ANYONE_ANONYMOUS",
-    "executeAs": "USER_DEPLOYING"
+    "libraries": [
+      {
+        "userSymbol": "DetourTableauUrl",
+        "version": "4",
+        "libraryId": "1rLXj5KqFRmp91KFSI4wwViFda6-0vG4_QqYGAgWmk_ApYpAtnUv-4Hzr",
+        "developmentMode": false
+      }
+    ]
   },
   "exceptionLogging": "STACKDRIVER",
-  "runtimeVersion": "V8"
+  "runtimeVersion": "V8",
+  "webapp": {
+    "executeAs": "USER_DEPLOYING",
+    "access": "ANYONE_ANONYMOUS"
+  }
 }
