Fix paths in ssl client nginx snippet

--- a/nginx/ledetour-membres-ssl-clients.conf
+++ b/nginx/ledetour-membres-ssl-clients.conf
@@ -3,6 +3,11 @@
 # get-members-json.py is the SSL client certificate is successfully
 # verified
 
+ssl_client_certificate /etc/ledetour-membres/ca.crt;
+ssl_verify_client optional;
+
+#ssl_verify_depth 2;
+
 location /members.json {
   if ($ssl_client_verify = "SUCCESS") {
     rewrite ^/members.json$ /members-non-anonymized.json last;
@@ -14,9 +19,9 @@ location /members-non-anonymized.json {
   if ($ssl_client_verify != "SUCCESS") {
     return 403;
   }
-  alias /var/run/ledetour-membres/members-non-anonymized.json;
+  alias /var/lib/ledetour-membres/members-non-anonymized.json;
 }
 
 location /members-anonymized.json {
-  alias /var/run/ledetour-membres/members-anonymized.json;
+  alias /var/lib/ledetour-membres/members-anonymized.json;
 }
